server/templates/style.css
/* Styles for main page */ 

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #fafafa;
    margin: 0;
    padding: 0;
    line-height: 1.6;
}

.container {
  width: 90%;
  margin: 20px auto;
  padding: 20px;
  background-color: #fff;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  position: relative; 
}

h1, h2 {
    color: #333;
}

h3 {
    font-style: italic; 
    font-size: smaller; 
    color: #555; 
}

p {
    margin: 10px 0;
    color: #666;
}

.button, .loginButton,
input[type="submit"] {
  display: inline-block;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  text-decoration: none;
  color: #fff;
  background-color: #007bff;
  border: none;
  border-radius: 5px;
  transition: background-color 0.3s ease;
}


.loginButton {
  padding: 5px 10px; 
  font-size: 14px; 
  position: absolute;
  top: 20px;
  right: 20px;
}

.button:hover, .loginButton:hover, input[type="submit"]:hover {
    background-color: #0056b3;
}

#intakeForm, #thankYouMessage, #unknownAccountMessage {
    text-align: left;
    margin-top: 20px;
    display: none; /* Hide elements initially */
}

label {
    display: block;
    margin: 15px 0 5px;
}

input[type="text"], textarea {
    width: 95%;
    padding: 8px;
    margin-bottom: 20px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}




textarea {
    height: 100px;
    resize: vertical;
}

.name-fields {
    display: flex;
    justify-content: start; 
    gap: 20px; 
    width: 95%; 
}

.field-group {
    display: flex;
    flex-direction: column;
    width:95%;
    box-sizing: border-box;
}

#intakeForm small {
    display: block;
    margin-top: -5px; /* Adjusts the space between the input and the directions */
    margin-bottom: 1px;
    font-size: 0.8em; /* Smaller font size */
    color: #666; /* Dim color for less emphasis */
}


select {
    font-family: inherit; /* Ensures dropdown uses the same font as the form */
    font-size: 16px; /* Adjust as needed to match other input fields */
    padding: 2px 2px; /* Provides padding inside the dropdown */
    margin-right: 20px; /* Optional: adds space to the right of the select, if needed */
    width: auto; /* Adjusts width automatically based on content */
}

.case-type-group  {
    display: flex;
    align-items: top; 
   
}

.case-type-group label {
    margin-right: 10px; /* Adjust based on spacing preference */
}


.error-message {
    color: red;
    font-size: 0.8em; /* Adjust size as needed */
    margin-top: -13px;
}




@media (max-width: 600px) {
    .field-group {
        flex-basis: 100%; /* Stacks the fields vertically on smaller screens */
    }
}

